# ai-resume-optimizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKEND.md  BLANK_SCREEN_RUNTIME_ANALYSIS.md  CLEANUP_REPORT.md  Dockerfile  Dockerfile.prod  FINAL_REMEDIATION_REPORT.md  MARKET_INTELLIGENCE_IMPLEMENTATION_PLAN.md  PARSER_QUALITY_REPORT.md  PARSER_TRANSFORMATION_PLAN.md  PARSER_V2_QUALITY_REPORT.md  PARSE_RESUME_FAILURE_REPORT.md  README.md  REAL_TIME_CAREER_INTELLIGENCE_ARCHITECTURE.md  REPOSITORY_INVENTORY.md  RESUME_PARSER_AUDIT.md  RESUME_UPLOAD_REPAIR_REPORT.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: backend-tests.yml  frontend-build.yml  lint.yml  pages.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_user_profile_tables.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .env  .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/dev/: null
frontend/public/: 404.html
frontend/public/icons/: generate.py  manifest.json
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts  test-utils.tsx
frontend/src/__tests__/: app.test.tsx  dashboard.test.tsx
frontend/src/components/: ResumeDropzone.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: mutations.ts  queries.ts
frontend/src/lib/: api.ts  profile.ts  utils.ts
frontend/src/pages/: AiSettings.tsx  Analytics.tsx  Analyzer.tsx  Career.tsx  Dashboard.tsx  HealthDashboard.tsx  InterviewPrep.tsx  JobMatch.tsx  Landing.tsx  Login.tsx  MarketIntelligence.tsx  Onboarding.tsx  ProfileSettings.tsx  Settings.tsx  Signup.tsx
src/ai_career_platform/: __init__.py  config.py  main.py  models.py  security.py
src/ai_career_platform/ai_providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/ai_career_platform/analytics/: __init__.py  (+2 more)
src/api/: server.py
tests/: test_analytics_tracker.py  test_api_integration.py  test_ats_engine.py  test_auth.py  test_career_dashboard.py  test_interview_module.py  test_job_matcher.py  test_parser_v2.py  test_resume_ingestion.py  test_security.py  test_upload.py  test_validators.py
(+19 files in other folders)
