[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-optimizer"
version = "1.0.0"
description = "Production-grade AI Career Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "AI Career Platform", email = "ops@example.com" }]
license = { text = "MIT" }
keywords = ["resume", "ats", "career", "ai"]
classifiers = ["Development Status :: 5 - Production/Stable"]
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "ollama>=0.4.7",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_career_platform --cov-report=term-missing --cov-fail-under=70"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
