[project]
name = "ai_career_platform"
version = "0.2.0"
description = "AI Career Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "passlib[bcrypt]>=1.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
    "limits>=3.5",
    "ollama>=0.4.7",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-generativeai>=0.3.0"]
docs = [
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
]
crew = [
    "crewai>=0.95.0",
    "crewai-tools>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
ai-career = "ai_career_platform.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_career_platform", "src/api"]
